--- a/src/assets/global-styles.css
+++ b/src/assets/global-styles.css
@@ -1,5 +1,4 @@
 body {
-    padding: 0;
     background-color: rgba(17, 17, 17, 1);
     margin: 0;
     font-family: 'onest', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,9 +10,15 @@ body {
 }
 
 p {
-    font-size: 360%;
+    font-size: 119px;
+    margin-top: 100px;
+    margin-bottom: 60px;
 }
 
-.HeaderFontParam{
+.seventeen-font {
+    font-size: 17px;
+}
+
+.fourteen-font {
     font-size: 14px;
 }
