--- a/src/assets/global-styles.css
+++ b/src/assets/global-styles.css
@@ -6,14 +6,20 @@ body {
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    color: white;
+    color: rgba(255, 255, 255, 1);
 }
 
 p {
     font-size: 119px;
     margin-top: 100px;
     margin-bottom: 60px;
+    color: rgba(255, 255, 255, 1);
+    font-family: "Alumni Sans", sans-serif;
+    font-stretch: condensed;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
+
 
 .seventeen-font {
     font-size: 17px;
