--- a/src/assets/global-styles.css
+++ b/src/assets/global-styles.css
@@ -28,3 +28,11 @@ p {
 .fourteen-font {
     font-size: 14px;
 }
+
+.seventeen-gray-font {
+    font-size: 17px;
+}
+
+.fourteen-gray-font {
+    font-size: 14px;
+}
